After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662225 - meta-window-group: Use clutter_actor_has_effects instead of get_effects
meta-window-group: Use clutter_actor_has_effects instead of get_effects
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-19 17:25 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2011-10-21 17:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
meta-window-group: Use clutter_actor_has_effects instead of get_effects (1.88 KB, patch)
2011-10-19 17:25 UTC, Jasper St. Pierre (not reading bugmail)
reviewed Details | Review
meta-window-group: Use clutter_actor_has_effects if available (1.96 KB, patch)
2011-10-20 19:26 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2011-10-19 17:25:27 UTC
Don't allocate a new list on every update of a window with a modal dialog.
Comment 1 Jasper St. Pierre (not reading bugmail) 2011-10-19 17:25:28 UTC
Created attachment 199457 [details] [review]
meta-window-group: Use clutter_actor_has_effects instead of get_effects
Comment 2 Florian Müllner 2011-10-19 17:40:31 UTC
Review of attachment 199457 [details] [review]:

Looks good, but in my opinion we should either avoid the version bump or not push the patch until mutter/gnome-shell are usable with unstable clutter.

::: configure.in
@@ +186,3 @@
 fi
 
+CLUTTER_VERSION=1.9.1

Given the general brokenness at the moment when using unstable cogl/clutter, can we not bump the requirement and #if #else the code in question for now?
Comment 3 Jasper St. Pierre (not reading bugmail) 2011-10-20 19:26:15 UTC
Created attachment 199573 [details] [review]
meta-window-group: Use clutter_actor_has_effects if available

This avoids a potentially costly allocation on every pixmap update.



This better?
Comment 4 Florian Müllner 2011-10-21 13:18:30 UTC
Review of attachment 199573 [details] [review]:

Looks good with "inline" removed.

::: src/compositor/meta-window-group.c
@@ +106,3 @@
+#else
+
+inline static gboolean

inline is C99
Comment 5 Jasper St. Pierre (not reading bugmail) 2011-10-21 13:21:03 UTC
Attachment 199573 [details] pushed as 3599917 - meta-window-group: Use clutter_actor_has_effects if available
Comment 6 Owen Taylor 2011-10-21 17:30:14 UTC
(In reply to comment #4)
> Review of attachment 199573 [details] [review]:
> 
> Looks good with "inline" removed.
> 
> ::: src/compositor/meta-window-group.c
> @@ +106,3 @@
> +#else
> +
> +inline static gboolean
> 
> inline is C99

I don't think inline is necessary here, but for reference:

 * GLib will define inline if missing, so 'static inline' is fine (header files are more complex if you care about old compilers )
 * Mutter is defined to be using C99 now
Comment 7 Florian Müllner 2011-10-21 17:48:25 UTC
(In reply to comment #6)
>  * Mutter is defined to be using C99 now

Oh, I wasn't aware of that