meta-window-group: Use clutter_actor_has_effects if available

This avoids a potentially costly allocation on every pixmap update.

https://bugzilla.gnome.org/show_bug.cgi?id=662225